# acorn-os-kernel-OLD-

./: Cargo.toml  build.rs  makefile
.cargo/: config.toml
arch/: Cargo.toml
arch/proc-macros/: Cargo.toml
arch/proc-macros/src/: isr.rs  lib.rs
arch/src/: cpu.rs  fam.rs  lib.rs
arch/src/cpu/: x86_64.rs
drivers/: Cargo.toml
drivers/proc-macros/: Cargo.toml
drivers/src/: lib.rs  serial.rs
hal/: Cargo.toml
hal/proc-macros/: Cargo.toml
hal/src/: fb.rs  irq.rs  kbd.rs  lib.rs  serial.rs
hw/: Cargo.toml
hw/src/: lib.rs  serial.rs
kapi/: Cargo.toml
kapi/src/: lib.rs
kutil/: Cargo.toml
kutil/src/: lib.rs  mem.rs
platform/: Cargo.toml
platform/proc-macros/: Cargo.toml
platform/proc-macros/src/: component.rs  keys.rs  lib.rs  platform.rs
platform/src/: components.rs  lib.rs  platforms.rs  types.rs  utils.rs
platform/src/components/: serial_out.rs  shell.rs
platform/src/components/serial_out/: amd64_ibmpc.rs
src/: boot.rs  exceptions.rs  interrupts.rs  irq.rs  kernel.rs  kernel_lib.rs  keyboard.rs  lib.rs  log.rs  main.rs  mem.rs  panic.rs  shell.rs  symbols.rs  syms.rs
src/arch/: mod.rs
src/boot/: amd64.rs
src/drivers/: console.rs  mod.rs  ps2.rs  serial_out.rs
src/fs/: mod.rs
src/hal/: console.rs  fb.rs  irq.rs  keyboard.rs  mod.rs  paging.rs  serial.rs
src/kapi/: keyboard.rs  mod.rs
src/kutil/: mod.rs
src/mem/: alloc.rs  alloc_err.rs  heap.rs  mod.rs  paging.rs  wma.rs
src/util/: mod.rs
targets/amd64/: amd64-kernel.json  link.ld
util/: Cargo.toml
util/proc-macros/: Cargo.toml
util/src/: lib.rs  log.rs
(+84 files in other folders)
